Update CMake/Emscripten shell args, update emscripten-related main loop stuff, add secure_http_server.py

--- a/deps/emscripten/shell_minimal.html
+++ b/deps/emscripten/shell_minimal.html
@@ -54,7 +54,8 @@
         },
         monitorRunDependencies: function(left) {
             // no run dependencies to log
-        }
+        },
+        arguments: ['-i']
       };
       window.onerror = function() {
         console.log("onerror: " + event);
