--- a/deps/emscripten/shell_minimal.html
+++ b/deps/emscripten/shell_minimal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
-    <title>Dear ImGui Emscripten example</title>
+    <title>Maze Builder</title>
     <style>
         body { margin: 0; background-color: black }
         /* FIXME: with our GLFW example this block seems to break resizing and io.DisplaySize gets stuck */
