Update basic web build with new shaders, fix em bindings

--- a/deps/emscripten_local/shell_minimal.html
+++ b/deps/emscripten_local/shell_minimal.html
@@ -66,7 +66,7 @@
         postRun: [],
         onRuntimeInitialized: function () {
           Module.setStatus("Downloading...");
-          craft = Module.craft.get_instance("", "", 800, 600);
+          craft = Module.craft.get_instance("Maze Builder - LOCAL", "", 800, 600);
           startPolling();
         },
         print: (function () {
