add emsdk support for physics example

--- a/deps/emscripten_local/shell_minimal.html
+++ b/deps/emscripten_local/shell_minimal.html
@@ -88,7 +88,7 @@
         postRun: [],
         onRuntimeInitialized: function () {
           Module.setStatus("Polling events...");
-          craft = Module.craft.get_instance("Maze Builder - LOCAL", "", 600, 480);
+          // craft = Module.craft.get_instance("Maze Builder - LOCAL", "", 600, 480);
           startPolling();
         },
         print: (function () {
